--- a/fallen_heirs/localisation/english/fallen_heirs_l_english.yml
+++ b/fallen_heirs/localisation/english/fallen_heirs_l_english.yml
@@ -3,4 +3,19 @@
  civic_sanctuary:0 "Sanctuary"
  civic_sanctuary_desc:0 "This society has evolved on a ring world, seeded and forgotten by an ancient empire."
  civic_tooltip_sanctuary_effects:0 "Homeworld is a §Y$pc_ringworld_habitable$§! (Size: £planetsize  §Y25§!)\nHabitability preference is set to §Y$trait_pc_ringworld_habitable_preference$§!, making planets undesireable."
- START_SCREEN_POST_SANCTUARY:0 "The vast ring world we call home has always been a paradise to our kind, and as our scientific knowledge progressed, we began to see patterns in the biosphere that could not be natural.\n\nDid some unknown entity create this world specifically for us? Are we playing a part in a greater design? Regardless of its origin, our people have thrived in the pleasant climate and gentle environment of our homeworld."
+ START_SCREEN_POST_SANCTUARY:0 "The vast ring world we call home has always been a paradise to our kind, and as our scientific knowledge progressed, we began to see patterns in the biosphere that could not be natural.\n\nDid some unknown entity create this wonderous structure specifically for us? Are we playing a part in a greater design? Regardless of its origin, our people have thrived in the pleasant climate and gentle environment of our homeworld."
+
+ civic_fallen_heir:0 "Fallen Heir"
+ civic_fallen_heir_desc:0 "This civilization was nutured into existence by a fallen empire."
+ civic_tooltip_fallen_heir_effects:0 "May acquire Fallen Empire perks."
+
+ civic_archivist:0 "Archivist"
+ civic_archivist_desc:0 "This empire has discovered ancient archives on its homeworld."
+ civic_tooltip_archivist_effects:0 "Begin with two §Y$building_ancient_archives$§! research buildings."
+ START_SCREEN_POST_ARCHIVIST:0 "Our technology advanced rapidly after deciphering the alien monuments. Wars were fought over the right to claim the knowledge kept within. It was only because of the lessons learned from within the archives that we were able to quell the conflicts and keep from destroying ourselves. Since then, our greatest minds have been diligently studying the old records and trying to piece together the story of our past... and our future."
+
+ ap_heir_to_the_empire:0 "Heir to the Empire"
+ ap_heir_to_the_empire_desc:0 "We shall adopt the ways of our ancient creators. The secrets of the cosmos are our birthright."
+
+ ap_heir_ascendant:0 "Heir Ascendant"
+ ap_heir_ascendant_desc:0 "We will not be content to live in the shadow of our forebearers. We shall stand on the shoulders of giants and claim the cosmos."
