slight tweak on perks and localization

--- a/fallen_heirs/localisation/english/fallen_heirs_l_english.yml
+++ b/fallen_heirs/localisation/english/fallen_heirs_l_english.yml
@@ -16,6 +16,7 @@
 
  ap_heir_to_the_empire:0 "Heir to the Empire"
  ap_heir_to_the_empire_desc:0 "We shall adopt the ways of our ancient creators. The secrets of the cosmos are our birthright."
+ ap_heir_to_the_empire_tooltip:0 "We will prepare a special project to transform our empire's infrastructure to match our fallen creators."
 
  ap_heir_ascendant:0 "Heir Ascendant"
  ap_heir_ascendant_desc:0 "We will not be content to live in the shadow of our forebearers. We shall stand on the shoulders of giants and claim the cosmos."
