added event to update species and ethics for first perk

--- a/fallen_heirs/localisation/english/fallen_heirs_l_english.yml
+++ b/fallen_heirs/localisation/english/fallen_heirs_l_english.yml
@@ -16,7 +16,17 @@
 
  ap_heir_to_the_empire:0 "Heir to the Empire"
  ap_heir_to_the_empire_desc:0 "We shall adopt the ways of our ancient creators. The secrets of the cosmos are our birthright."
- ap_heir_to_the_empire_tooltip:0 "We will prepare a special project to transform our empire's infrastructure to match our fallen creators."
+ ap_heir_to_the_empire_tooltip:0 "Our empire will remodel its operations according to precursor policies."
+ requires_ap_heir_to_the_empire:1 "$TRIGGER_FAIL$Requires the §Y$ap_heir_to_the_empire$§! Ascension Perk."
 
  ap_heir_ascendant:0 "Heir Ascendant"
  ap_heir_ascendant_desc:0 "We will not be content to live in the shadow of our forebearers. We shall stand on the shoulders of giants and claim the cosmos."
+ ap_heir_ascendant_tooltip:0 "We will prepare a special project to transform our empire's infrastructure to match our fallen creators."
+
+ requires_technology_mine_dark_matter:0 "$TRIGGER_FAIL$Requires the £physics  §Y$tech_mine_dark_matter$§! technology."
+
+ fallenheir.1.name:0 "Heir to the Empire"
+ fallenheir.1.desc:0 "We've restructured our government to follow fallen empire stuff. FIX ME."
+ fallenheir.1.a:0 "Follow the spiritualist path."
+ fallenheir.1.b:0 "Follow the materialist path."
+ fallenheir.1.c:0 "Follow the other path. FIX ME."
