finalized (hopefully) enigmatic trait

--- a/fallen_heirs/localisation/english/fallen_heirs_l_english.yml
+++ b/fallen_heirs/localisation/english/fallen_heirs_l_english.yml
@@ -33,3 +33,13 @@
 
  leader_trait_enigmatic:0 "Enigmatic"
  leader_trait_enigmatic_desc:0 "This leader has adopted the habits and beliefs of a bygone age."
+ leader_trait_ruler_enigmatic:0 "Enigmatic"
+ leader_trait_ruler_enigmatic_desc:0 "This leader has adopted the habits and beliefs of a bygone age."
+ leader_trait_governor_enigmatic:0 "Enigmatic"
+ leader_trait_governor_enigmatic_desc:0 "This leader has adopted the habits and beliefs of a bygone age."
+ leader_trait_scientist_enigmatic:0 "Enigmatic"
+ leader_trait_scientist_enigmatic_desc:0 "This leader has adopted the habits and beliefs of a bygone age."
+ leader_trait_admiral_enigmatic:0 "Enigmatic"
+ leader_trait_admiral_enigmatic_desc:0 "This leader has adopted the habits and beliefs of a bygone age."
+ leader_trait_general_enigmatic:0 "Enigmatic"
+ leader_trait_general_enigmatic_desc:0 "This leader has adopted the habits and beliefs of a bygone age."
